--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,8 @@ services:
   - docker
 
 before_install:
-  - docker build -t ramezwasfy91/docker-react -f Dockerfile.dev npm run test -- --coverage
+  - docker build -t ramezwasfy91/docker-react -f Dockerfile.dev .
+
+script:
+  - docker run ramezwasfy91/docker-react npm run test -- --coverage
+
