--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+language: generic
 sudo: required
 services:
   - docker
@@ -6,5 +7,5 @@ before_install:
   - docker build -t ramezwasfy91/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run ramezwasfy91/docker-react npm run test -- --coverage
+  - docker run -e CI=true ramezwasfy91/docker-react npm run test
 
